--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/node": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
     "pug": "^3.0.0",
     "socket.io": "^3.1.0"
