--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Bulit in NodeJs, Gulp, SocketIO",
   "main": "index.js",
   "scripts": {
-    "dev:server": "nodemon --exec babel-node src/server"
+    "dev:server": "nodemon --exec babel-node src/server --ignore assets/ --ignore src/static",
+    "dev:assets": "gulp"
   },
   "author": "",
   "license": "ISC",
@@ -12,8 +13,16 @@
     "@babel/core": "^7.12.10",
     "@babel/node": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
+    "babelify": "^10.0.0",
+    "del": "^6.0.0",
     "express": "^4.17.1",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-browserify": "^0.5.1",
+    "gulp-csso": "^4.0.1",
+    "gulp-sass": "^4.1.0",
     "morgan": "^1.10.0",
+    "node-sass": "^5.0.0",
     "nodemon": "^2.0.7",
     "pug": "^3.0.0",
     "socket.io": "^3.1.0"
@@ -25,5 +34,8 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
     "prettier": "^2.2.1"
-  }
+  },
+  "browserslist": [
+    "last 2 versions"
+  ]
 }
